[gd_scene load_steps=31 format=3 uid="uid://bmtfbq8p2itb"]

[ext_resource type="Script" uid="uid://djuoimg17psuo" path="res://Controller/Scripts/player.gd" id="1_pknhu"]
[ext_resource type="Script" uid="uid://bnrs6pel5l2tg" path="res://Scripts/reticle.gd" id="2_ca3lp"]
[ext_resource type="Material" uid="uid://d201mavja7435" path="res://Ui/Materials/Player.tres" id="2_vkdw5"]
[ext_resource type="PackedScene" uid="uid://ml4emtg70nx7" path="res://Meshes/Weapons/weapon.tscn" id="3_4r3x1"]
[ext_resource type="Theme" uid="uid://bvw8gm6d6xsdk" path="res://Ui/Themes/DebugPanel.tres" id="3_8xe5w"]
[ext_resource type="Script" uid="uid://csppt7cvrx82t" path="res://Scripts/recoil_controller.gd" id="3_wopls"]
[ext_resource type="Script" uid="uid://0icf8m2qufr7" path="res://Scripts/debug_panel.gd" id="4_o4itx"]
[ext_resource type="PackedScene" uid="uid://b8tg6tuy52phv" path="res://Meshes/New_rope.tscn" id="5_3g7m0"]
[ext_resource type="Script" uid="uid://eamfse10yi7" path="res://Scripts/state_machine.gd" id="5_hla6f"]
[ext_resource type="Script" uid="uid://b701jlc5xd3fk" path="res://Controller/Scripts/idle_player_state.gd" id="6_523qk"]
[ext_resource type="Script" uid="uid://bcn5u0xoa754i" path="res://Controller/Scripts/walking_player_state.gd" id="7_vkdw5"]
[ext_resource type="Script" uid="uid://dwhlsg6567qk" path="res://Controller/Scripts/sprinting_player_state.gd" id="8_523qk"]
[ext_resource type="Script" uid="uid://bxqwcsexf7brh" path="res://Controller/Scripts/crouching_player_state.gd" id="10_k0hyi"]
[ext_resource type="Script" uid="uid://76ni8whqyltf" path="res://Controller/Scripts/sliding_player_state.gd" id="11_auu0e"]
[ext_resource type="Script" uid="uid://7lopu3n4n0hp" path="res://Controller/Scripts/jump_player_state.gd" id="12_auu0e"]
[ext_resource type="Script" uid="uid://clhfumebgjfkn" path="res://Controller/Scripts/wall_run_player_state.gd" id="13_oxdpf"]
[ext_resource type="Script" uid="uid://d0ch2qk1pqjor" path="res://Controller/Scripts/falling_player_state.gd" id="14_n5b3e"]
[ext_resource type="Script" uid="uid://dv14ib2b0033k" path="res://Controller/Scripts/grappling_player_state.gd" id="16_teod1"]
[ext_resource type="Script" uid="uid://ppo5mtf1jbx0" path="res://Scripts/sub_viewport.gd" id="18_xvjrc"]
[ext_resource type="Script" uid="uid://ck8l45qmqr1x" path="res://Scripts/camera_3d.gd" id="19_wopls"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pknhu"]
height = 2.005127

[sub_resource type="CapsuleMesh" id="CapsuleMesh_u1h6f"]

[sub_resource type="Animation" id="Animation_ca3lp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.005127]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0051838756, 0.71829903, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CameraController:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CameraController:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CameraController:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ShapeCast3D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [7.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CameraController/RecoilController/Camera3D:fov")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("PlayerStateMachine/WallRunPlayerState:WALL_RUN_SPEED")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6.0]
}

[sub_resource type="Animation" id="Animation_vkdw5"]
resource_name = "Sprint"
length = 1.4
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/RecoilController/Camera3D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 3, 3, 3, 3, 3, 3, 3),
"points": PackedFloat32Array(-0.0025415085, -0.2487429, -0.027668407, 0.033333335, 0.0037077656, 0.060285393, -0.06666666, -0.0006497726, 0.06666666, 0.0006497726, -0.02788271, -0.10337931, -0.0011822972, 0.10337931, 0.0011822972, 0.07921402, -0.10337928, -3.4295022e-05, 0.10337928, 3.4295022e-05, -0.04977826, -0.105059326, -0.000443805, 0.105059326, 0.000443805, 0.09046415, -0.077112615, -7.450581e-09, 0.077112615, 7.450581e-09, -0.06575525, -0.12201357, -0.0017752275, 0.12201357, 0.0017752275, 0.0021469428, -0.089467406, 0, 0.089467406, 0),
"times": PackedFloat32Array(0, 0.13333334, 0.3, 0.46666667, 0.6333333, 0.9, 1.1, 1.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/RecoilController/Camera3D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(3, 3, 3, 3, 3, 3, 3, 3),
"points": PackedFloat32Array(-0.0038410567, -0.033333335, 0, 0.033333335, 0, 0.08350254, -0.06666667, 0.000443805, 0.06666667, -0.000443805, -0.05015622, -0.099999994, -0.0007147528, 0.099999994, 0.0007147528, 0.1006566, -0.06666669, 0, 0.06666669, 0, -0.049334474, -0.10327339, -0.001331415, 0.10327339, 0.001331415, 0.1142369, -0.09297186, 0, 0.09297186, 0, -0.056435335, -0.12280071, -0.000443805, 0.12280071, 0.000443805, 0.006309243, -0.06666666, 0, 0.06666666, 0),
"times": PackedFloat32Array(0, 0.13333334, 0.3, 0.46666667, 0.6333333, 0.9, 1.1, 1.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/RecoilController/Camera3D:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(0.0012593066, -0.25, 0, 0.25, 0, -0.0016815534, -0.18333332, 0.0006964255, 0, 0),
"times": PackedFloat32Array(0.33333334, 1.4)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_n5b3e"]
resource_name = "WallRun"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/RecoilController/Camera3D:fov")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 4.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [75.0, 84.0, 75.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerStateMachine/WallRunPlayerState")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerStateMachine/WallRunPlayerState:WALL_RUN_SPEED")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 1.5]
}

[sub_resource type="Animation" id="Animation_pknhu"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.005127, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0051838756, 0.71829903, 0), Vector3(-0.005, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="Animation_oxdpf"]
resource_name = "sliding"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShapeCast3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [7.0, 4.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CameraController/RecoilController/Camera3D:fov")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5, 4.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [75.0, 84.0, 75.0]
}

[sub_resource type="Animation" id="Animation_hla6f"]
resource_name = "walking"
length = 1.5
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 3, 2, 3, 3, 3, 3),
"points": PackedFloat32Array(0, -0.24998575, -0.00032746652, 0.24396285, 0.00031957688, 0.017603349, -0.06666666, 0, 0.06666666, 0, -0.00012390292, -0.115663484, -2.6708509e-05, 0.20331192, 4.6947906e-05, -0.010171727, -0.12269467, 0, 0.12269467, 0, -0.00025686994, -0.12269473, -0.0002505161, 0.12269473, 0.0002505161, 0.008379034, -0.100000024, -0.00024867058, 0.100000024, 0.00024867058, -7.69553e-05, -0.041666657, 0, 0.041666657, 0),
"times": PackedFloat32Array(0, 0.3, 0.53333336, 0.8, 1.1333333, 1.3333334, 1.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 3, 3, 2, 3, 3),
"points": PackedFloat32Array(1.5, -0.25, 0, 0.25, 0, 1.5510148, -0.2, -0.00025057793, 0.2, 0.00025057793, 1.4503174, -0.19999999, -0.00025057793, 0.19999999, 0.00025057793, 1.5503491, -0.16666669, 0.00050103664, 0.16655508, -0.00050070114, 1.4496511, -0.088249445, 0.0033341646, 0.088249445, -0.0033341646, 1.5000004, -0.041666687, 0, 0.041666687, 0),
"times": PackedFloat32Array(0, 0.3, 0.6333333, 0.96666664, 1.2666667, 1.4666667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8xe5w"]
_data = {
&"RESET": SubResource("Animation_ca3lp"),
&"Sprint": SubResource("Animation_vkdw5"),
&"WallRun": SubResource("Animation_n5b3e"),
&"crouch": SubResource("Animation_pknhu"),
&"sliding": SubResource("Animation_oxdpf"),
&"walking": SubResource("Animation_hla6f")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_pknhu"]

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER", "ANIMATION_PLAYER", "CROUCH_SHAPECAST", "WEAPON_CONTROLLER")]
script = ExtResource("1_pknhu")
CAMERA_CONTROLLER = NodePath("CameraController/RecoilController/Camera3D")
ANIMATION_PLAYER = NodePath("AnimationPlayer")
CROUCH_SHAPECAST = NodePath("ShapeCast3D")
WEAPON_CONTROLLER = NodePath("CameraController/RecoilController/Camera3D/WeaponRig/weapon")
gravity = 7.5
CAMERA_TILT_SPEED = 6.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0051838756, 0.71829903, 0)
shape = SubResource("CapsuleShape3D_pknhu")
debug_color = Color(0.93757296, 0.11323815, 0.55717313, 0.41960785)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0051838756, 0.007263422, 0)
material_override = ExtResource("2_vkdw5")
mesh = SubResource("CapsuleMesh_u1h6f")
skeleton = NodePath("../..")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="RecoilController" type="Node3D" parent="CameraController" node_paths=PackedStringArray("weapon")]
script = ExtResource("3_wopls")
recoil_amount = Vector3(0.15, 0.05, 0)
snap_amount = 8.0
speed = 4.0
weapon = NodePath("Camera3D/WeaponRig/weapon")

[node name="Camera3D" type="Camera3D" parent="CameraController/RecoilController"]
cull_mask = 1048573

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/RecoilController/Camera3D"]
visible = false
update_mode = 1

[node name="WeaponRig" type="Node3D" parent="CameraController/RecoilController/Camera3D"]

[node name="weapon" parent="CameraController/RecoilController/Camera3D/WeaponRig" instance=ExtResource("3_4r3x1")]
transform = Transform3D(-0.4995972, 0, -0.020065954, 0, 0.5, 0, 0.020065954, 0, -0.4995972, -0.003, -0.951, -0.155)

[node name="Hook" type="RayCast3D" parent="CameraController/RecoilController/Camera3D"]
target_position = Vector3(0, 0, -50)

[node name="Rope" parent="CameraController/RecoilController/Camera3D" instance=ExtResource("5_3g7m0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.415)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8xe5w")
}

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_pknhu")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UserInterface" node_paths=PackedStringArray("RETICLE_LINES", "PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ca3lp")
RETICLE_LINES = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]
PLAYER_CONTROLLER = NodePath("../..")
RETICLE_SPEED = 0.3
RETICLE_DISTANCE = 4.0

[node name="Top" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UserInterface/Reticle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("3_8xe5w")
script = ExtResource("4_o4itx")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_hla6f")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_523qk")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_vkdw5")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("WALL_RAY_LEFT", "WALL_RAY_RIGHT")]
script = ExtResource("8_523qk")
WALL_RAY_LEFT = NodePath("../../Left")
WALL_RAY_RIGHT = NodePath("../../Right")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("CROUCH_SHAPECAST")]
script = ExtResource("10_k0hyi")
CROUCH_SHAPECAST = NodePath("../../ShapeCast3D")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("CROUCH_SHAPECAST")]
script = ExtResource("11_auu0e")
CROUCH_SHAPECAST = NodePath("../../ShapeCast3D")

[node name="JumpPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("WALL_RAY_LEFT", "WALL_RAY_RIGHT")]
script = ExtResource("12_auu0e")
WALL_RAY_LEFT = NodePath("../../Left")
WALL_RAY_RIGHT = NodePath("../../Right")

[node name="WallRunPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("WALL_RAY_LEFT", "WALL_RAY_RIGHT")]
script = ExtResource("13_oxdpf")
WALL_RAY_LEFT = NodePath("../../Left")
WALL_RAY_RIGHT = NodePath("../../Right")

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_n5b3e")

[node name="GrapplingPlayerState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("Ray", "rope")]
script = ExtResource("16_teod1")
Ray = NodePath("../../CameraController/RecoilController/Camera3D/Hook")
rope = NodePath("../../CameraController/RecoilController/Camera3D/Rope")

[node name="Right" type="RayCast3D" parent="."]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0.2, 0)

[node name="Left" type="RayCast3D" parent="."]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, 0, 0.2, 0)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4
script = ExtResource("18_xvjrc")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport" node_paths=PackedStringArray("MAIN_CAMERA")]
cull_mask = 1048574
script = ExtResource("19_wopls")
MAIN_CAMERA = NodePath("../../../CameraController/RecoilController/Camera3D/WeaponRig")

[node name="HookTimerController" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="timeout" from="HookTimerController" to="PlayerStateMachine/GrapplingPlayerState" method="_on_hook_timer_controller_timeout"]
